# mcp-research-assistant

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  claude_config_updated.json  pyproject.toml  setup.py
examples/: mcp_client_config.py  research_workflow.py  simple_search.py
recommendation_systems_research/: Tech_Giants_Recommendation_Systems_Research_Summary.md
research_data/references/: 2403.09040_reference.json  2407.21059_reference.json  2410.07176_reference.json
research_data/summaries/: 2010.06030_summary.md  2403.09040_summary.json  2407.21059_summary.json  2408.02545_summary.json  2410.07176_summary.json  2506.09542_summary.json
research_summaries/: 5_Most_Important_Foundational_Papers_in_Generative_AI.md  RAG_Improvement_Research_Overview.md  WavRAG__Audio-Integrated_Retrieval_Augmented_Generation_for_Spoken_Dialogue_Models.md
src/mcp_research_assistant/: __init__.py  app.py  arxiv_client.py  config.py  file_manager.py  github_client.py  groq_client.py  jsonrpc.py  mcp_server.py  research_tools.py  server.py  utils.py
src/mcp_research_assistant/tools/: __init__.py  arxiv_tool.py  github_tool.py  notes_tool.py  summarizer_tool.py
tests/: conftest.py  test_arxiv_client.py  test_file_manager.py
